# stm32f2-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: logging.cmake  toolchain.arm-none-eabi-gcc.cmake
src/: common.h  main.c
src/logging/: logging.c  logging.h
src/panic/: panic.h
src/stm/: .mxproject  STM32F207ZGTx_FLASH.ld  stm.ioc
src/stm/Inc/: main.h  stm32f2xx_hal_conf.h  stm32f2xx_it.h
src/stm/Src/: main.c  stm32f2xx_hal_msp.c  stm32f2xx_it.c
